gitops/services/argocd/components/ingress/ingress.route.yaml
#-- https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/#ingressroute-crd
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  annotations:
    external-dns.alpha.kubernetes.io/target: $(configmap:argocd/cluster-config#clusterDNSZoneName)
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cd.$(configmap:argocd/cluster-config#clusterDNSZoneName)`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`cd.$(configmap:argocd/cluster-config#clusterDNSZoneName)`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  # tls:
  #   secretName: argocd-tls
